--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
     <!-- NAVBAR -->
     <header class="navbar">
+        <div class="cart-display" id="cartDisplay">
+            🛒 Keranjang: <span id="cartCount">0</span> item — 
+            <span id="cartTotal">Rp 0</span>
+        </div>
+        <button id="darkModeToggle" class="dark-toggle">🌙</button>
         <h1 class="logo">TokoKu</h1>
         <nav>
             <a href="#">Beranda</a>
