--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <p>Instagram: @tokoku</p>
         <p>&copy; 2025 TokoKu</p>
     </footer>
+    <script src="script.js"></script>
 
 </body>
 </html>
