--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katalog Toko</title>
+    <title> KOPSMART CATALOGUE</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
             <span id="cartTotal">Rp 0</span>
         </div>
         <button id="darkModeToggle" class="dark-toggle">🌙</button>
-        <h1 class="logo">TokoKu</h1>
+        <h1 class="logo">KOPSMART</h1>
         <nav>
             <a href="#">Beranda</a>
             <a href="#produk">Produk</a>
@@ -30,7 +30,7 @@
     <!-- HERO -->
     <section class="hero">
         <div class="hero-text">
-            <h2>Selamat Datang di Katalog TokoKu</h2>
+            <h2>Selamat Datang di KOPSMART KATALOG</h2>
             <p>Temukan produk terbaik dengan kualitas terjamin langsung dari penjual.</p>
             <a href="#produk" class="btn-primary">Lihat Produk</a>
         </div>
@@ -70,9 +70,9 @@
     <!-- FOOTER -->
     <footer id="kontak">
         <h3>Hubungi Kami</h3>
-        <p>WhatsApp: 08xxxxxxx</p>
-        <p>Instagram: @tokoku</p>
-        <p>&copy; 2025 TokoKu</p>
+        <p>WhatsApp: 08245672188625</p>
+        <p>Instagram: @KOPSMART</p>
+        <p>&copy; 2025 KOPSMART</p>
     </footer>
     <script src="script.js"></script>
 
