--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> KOPSMART CATALOGUE</title>
+    <title>Katalog Toko</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -14,23 +15,27 @@
 
     <!-- NAVBAR -->
     <header class="navbar">
-        <div class="cart-display" id="cartDisplay">
-            🛒 Keranjang: <span id="cartCount">0</span> item — 
-            <span id="cartTotal">Rp 0</span>
-        </div>
-        <button id="darkModeToggle" class="dark-toggle">🌙</button>
-        <h1 class="logo">KOPSMART</h1>
+        <h1 class="logo">TokoKu</h1>
         <nav>
             <a href="#">Beranda</a>
             <a href="#produk">Produk</a>
             <a href="#kontak">Kontak</a>
         </nav>
+
+        <!-- DARK MODE BUTTON -->
+        <button id="darkModeToggle" class="dark-toggle">🌙</button>
     </header>
+
+    <!-- CART DISPLAY -->
+    <div class="cart-display" id="cartDisplay">
+        🛒 Keranjang: <span id="cartCount">0</span> item — 
+        <span id="cartTotal">Rp 0</span>
+    </div>
 
     <!-- HERO -->
     <section class="hero">
         <div class="hero-text">
-            <h2>Selamat Datang di KOPSMART KATALOG</h2>
+            <h2>Selamat Datang di Katalog TokoKu</h2>
             <p>Temukan produk terbaik dengan kualitas terjamin langsung dari penjual.</p>
             <a href="#produk" class="btn-primary">Lihat Produk</a>
         </div>
@@ -41,15 +46,15 @@
         <h2 class="section-title">Daftar Produk</h2>
 
         <div class="product-grid">
-            <!-- Kartu Produk 1 -->
+            <!-- KARTU PRODUK 1 -->
             <div class="product-card">
                 <img src="img/produk1.jpg" alt="Produk 1">
-                <h3>Nama Produk</h3>
+                <h3>Nama Produk 1</h3>
                 <p class="price">Rp 100.000</p>
                 <button class="btn-buy">Beli Sekarang</button>
             </div>
 
-            <!-- Kartu Produk 2 -->
+            <!-- KARTU PRODUK 2 -->
             <div class="product-card">
                 <img src="img/produk2.jpg" alt="Produk 2">
                 <h3>Nama Produk 2</h3>
@@ -57,7 +62,7 @@
                 <button class="btn-buy">Beli Sekarang</button>
             </div>
 
-            <!-- Kartu Produk 3 -->
+            <!-- KARTU PRODUK 3 -->
             <div class="product-card">
                 <img src="img/produk3.jpg" alt="Produk 3">
                 <h3>Nama Produk 3</h3>
@@ -70,11 +75,11 @@
     <!-- FOOTER -->
     <footer id="kontak">
         <h3>Hubungi Kami</h3>
-        <p>WhatsApp: 08245672188625</p>
-        <p>Instagram: @KOPSMART</p>
-        <p>&copy; 2025 KOPSMART</p>
+        <p>WhatsApp: 08xxxxxxx</p>
+        <p>Instagram: @tokoku</p>
+        <p>&copy; 2025 TokoKu</p>
     </footer>
-    <script src="script.js"></script>
 
+    <script src="script.js"></script>
 </body>
 </html>
