--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
         <div class="product-grid">
             <!-- KARTU PRODUK 1 -->
             <div class="product-card">
-                <img src="img/produk1.jpg" alt="Produk 1">
-                <h3>Nama Produk 1</h3>
-                <p class="price">Rp 100.000</p>
+                <img src="kaoskaki1.jpg" alt="Produk 1">
+                <h3>Kaos Kaki</h3>
+                <p class="price">Rp 17.000</p>
                 <button class="btn-buy">Beli Sekarang</button>
             </div>
 
             <!-- KARTU PRODUK 2 -->
             <div class="product-card">
                 <img src="img/produk2.jpg" alt="Produk 2">
-                <h3>Nama Produk 2</h3>
+                <h3>Kaos Kaki</h3>
                 <p class="price">Rp 150.000</p>
                 <button class="btn-buy">Beli Sekarang</button>
             </div>
 
             <!-- KARTU PRODUK 3 -->
             <div class="product-card">
-                <img src="img/produk3.jpg" alt="Produk 3">
-                <h3>Nama Produk 3</h3>
-                <p class="price">Rp 200.000</p>
+                <img src="sabuki.jpg" alt="Produk 3">
+                <h3>Sabuk</h3>
+                <p class="price">Rp 25.000</p>
                 <button class="btn-buy">Beli Sekarang</button>
             </div>
         </div>
