--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <!-- KARTU PRODUK 3 -->
             <div class="product-card">
-                <img src="sabuki.jpg" alt="Produk 3">
+                <img src="sabuk.jpg" alt="Produk 3">
                 <h3>Sabuk</h3>
                 <p class="price">Rp 25.000</p>
                 <button class="btn-buy">Beli Sekarang</button>
