--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katalog Toko</title>
+    <title>KOPSMART CATALOGUE</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 
     <!-- NAVBAR -->
     <header class="navbar">
-        <h1 class="logo">TokoKu</h1>
+        <h1 class="logo">Koperasi SMA Negeri 1 Rengel</h1>
         <nav>
             <a href="#">Beranda</a>
             <a href="#produk">Produk</a>
@@ -35,7 +35,7 @@
     <!-- HERO -->
     <section class="hero">
         <div class="hero-text">
-            <h2>Selamat Datang di Katalog TokoKu</h2>
+            <h2>Selamat Datang di KOPSMART</h2>
             <p>Temukan produk terbaik dengan kualitas terjamin langsung dari penjual.</p>
             <a href="#produk" class="btn-primary">Lihat Produk</a>
         </div>
@@ -48,7 +48,7 @@
         <div class="product-grid">
             <!-- KARTU PRODUK 1 -->
             <div class="product-card">
-                <img src="kaoskaki1.jpg" alt="Produk 1">
+                <img src="kaos kaki1.jpg" alt="Produk 1">
                 <h3>Kaos Kaki</h3>
                 <p class="price">Rp 17.000</p>
                 <button class="btn-buy">Beli Sekarang</button>
